--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,10 +12,10 @@
       <ul class="navbar-nav me-auto">
         <%# if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
+            <%= link_to "Home", pitches_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Add Pitches", "#", class: "nav-link" %>
+            <%= link_to "Add Pitches", new_pitch_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Booking", bookings_path, class: "nav-link" %>
