--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -1,1 +1,5 @@
-<h1>pitch index</h1>
+<div class="container col-sm-4 col-9">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+
+    </div>
+</div>
