--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,5 +5,14 @@
     text-decoration: none;
     color: rgb(13, 13, 58);
   }
+}
 
+
+
+.price{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 9px;
+  margin-right: 15px;
 }
