implementing rating to the product card

--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -13,6 +13,9 @@
               <div class="price">
                 <p class="card-text"><strong><%= pitch.price %>€</strong> / hour</p>
               </div>
+              <div class="rating">
+                <p class="card-text><strong><%= pitch.price %>€</strong> / hour</p>
+              </div>
             </div>
           </div>
         <% end %>
