--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -14,7 +14,7 @@
                 <p class="card-text"><strong><%= pitch.price %>€</strong> / hour</p>
               </div>
               <div class="rating">
-                <p class="card-text><strong><%= pitch.price %>€</strong> / hour</p>
+                <p class="card-text"><strong><%= pitch.price %>€</strong> / hour</p>
               </div>
             </div>
           </div>
