--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container w-25 mt-5">
 
-  <% @bookink.pitch.name %>
+  <% @pitch.name %>
 
-  <%= simple_form_for @list do |f| %>
+  <%= simple_form_for [@pitch, @booking] do |f| %>
       <%= f.input :start_time, class: "back" %>
       <%= f.input :end_time, class: "back" %>
     <p><%= f.submit class: "btn btn-outline-secondary btn-sm " %></p>
