rating implemented on the index

--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -14,7 +14,9 @@
                 <p class="card-text"><strong><%= pitch.price %>€</strong> / hour</p>
               </div>
               <div class="rating">
-                <p class="card-text"><strong><%= pitch.reviews.rating %></strong><i class="fa-regular fa-star"></i></p>
+                <% pitch.reviews.each do |review| %>
+                  <p class="card-text"><%= review.rating %><i class="fa-regular fa-star"></i></p>
+                <% end %>
               </div>
             </div>
           </div>
