added edit new _form changed to correct home route

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="container navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to pitches_path, class: "navbar-brand" do %>
       <%= image_tag ("logov4.png") , style: "width: 400px;" %>
     <% end %>
 
