--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,9 +1,11 @@
+<div class="container w-25 mt-5">
 <h1>Review the Pitch</h1>
 <%= simple_form_for [@booking, @review] do |f| %>
   <%= f.input :rating, collection: (0..5)  %>
   <%= f.input :comment %>
   <%= f.submit "Submit Review", class: "btn btn-primary" %>
 <% end %>
+</div>
 
 <p></p>
 
