--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -15,7 +15,7 @@
               </div>
               <div class="rating">
                 <% pitch.reviews.each do |review| %>
-                  <p class="card-text"><%= review.rating %><i class="fa-regular fa-star"></i></p>
+                  <p class="card-text"><%= review.rating.round(1) %><i class="fa-regular fa-star"></i></p>
                 <% end %>
               </div>
             </div>
