--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -14,9 +14,7 @@
                 <p class="card-text"><strong><%= pitch.price %>€</strong> / hour</p>
               </div>
               <div class="rating">
-                <% pitch.reviews.each do |review| %>
-                  <p class="card-text"><%= review.rating.round(1) %><i class="fa-regular fa-star"></i></p>
-                <% end %>
+                  <p class="card-text"><%= pitch.average_rating %><i class="fa-regular fa-star"></i></p>
               </div>
             </div>
           </div>
