--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -1,3 +1,5 @@
 # imagem adicionada
 
-<%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
+<%= cl_image_tag @pitch.photo.key, height: 300, width: 400, crop: :fill %>
+
+
