--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -4,8 +4,8 @@
     <% @pitches.each do |pitch| %>
       <div class="col-md-3 mb-3 mt-3 index-card-wrap">
         <%= link_to pitch_path(pitch) do %>
-          <div class="card rounded-4 " style="width: 18rem; height: 25rem">
-            <img src="https://images.unsplash.com/photo-1676444920926-c8a084ec4003?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" class="card-img-top rounded-top-4" alt="...">
+          <div class="card rounded-4 " style="width: 18rem; height: 30rem">
+            <%= cl_image_tag pitch.photo.key, height: 250, width: 287, crop: :fill %>
             <div class="card-body">
               <h3 class="card-text"><%= pitch.name %></h3>
               <h5 class="card-text"><%= pitch.location %></h5>
