--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -1,4 +1,4 @@
-<%# <%= cl_image_tag @pitch.photo.key, height: 300, width: 400, crop: :fill %>
+<%#
 <div class="container">
   <h1><strong><%= @pitch.name %></strong></h1>
   <p class="title-text"><b><%= @pitch.average_rating %></b>
@@ -8,7 +8,7 @@
 
   <div class="d-flex justify-content-around" >
     <div style= "width: 700px;">
-      <img src="https://images.unsplash.com/photo-1676444920926-c8a084ec4003?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" class="card-img-top rounded-4 " alt="pic">
+      <%= cl_image_tag @pitch.photo.key, height: 300, width: 400, crop: :fill %>
     </div>
     <div class="">
       <p><b><%= @pitch.pitch_type %></b></p>
