--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -5,7 +5,7 @@
       <div class="col-md-3 mb-3 mt-3 index-card-wrap">
         <%= link_to pitch_path(pitch) do %>
           <div class="card rounded-4 " style="width: 18rem; height: 30rem">
-            <%= cl_image_tag pitch.photo.key, height: 250, width: 287, crop: :fill %>
+            <%= cl_image_tag pitch.photo.key, height: 250, width: 287, crop: :fill, class:"rounded-top-4" %>
             <div class="card-body">
               <h3 class="card-text"><%= pitch.name %></h3>
               <h5 class="card-text"><%= pitch.location %></h5>
@@ -21,6 +21,5 @@
         <% end %>
       </div>
     <% end %>
-
   </div>
 </div>
