--- a/app/assets/stylesheets/components/_pitch-show.scss
+++ b/app/assets/stylesheets/components/_pitch-show.scss
@@ -1,3 +1,22 @@
 .title-text{
   font-weight: 400;
 }
+
+.box{
+  box-shadow: 1px 1px 10px rgb(71, 71, 71);
+  width: 90%;
+  padding: 20px 20px;
+  margin-bottom: 20px;
+  height: 90%;
+  overflow: hidden;
+}
+
+
+.cards-container {
+  margin-top: 20px;
+  display: grid;
+  box-sizing: border-box;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: auto 1fr;
+  // grid-auto-rows: minmax(100px, auto);
+}
