--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,9 @@
+<div class="container w-25 mt-5">
 <h1>Review the Pitch</h1>
 <%= simple_form_for [@booking, @review] do |f| %>
   <%= f.input :rating, collection: (0..5)  %>
   <%= f.input :comment %>
-  <%= f.submit "Submit Review", class: "btn btn-primary" %>
+  <%= f.submit "Submit Review", class: "btn btn-primary mb-3" %>
 <% end %>
 
   <%= link_to "Go back to your bookings", bookings_path(@booking), class: "btn btn-primary" %>
