--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,9 +1,9 @@
-  <% @pitch.name %>
+<% @pitch.name %>
 
-  <%= simple_form_for [pitch, booking], data: { controller: 'flatpickr' } do |f| %>
+<%= simple_form_for [pitch, booking], data: { controller: 'flatpickr' } do |f| %>
   <%= f.input :start_time, as: :string, input_html: { data: { flatpickr_target: "startTime" } } %>
   <%= f.input :end_time, as: :string, input_html: { data: { flatpickr_target: "endTime" } } %>
   <p><%= f.submit class: "btn btn-outline-secondary btn-sm " %></p>
 <% end %>
 
-  <%= @booking.total_price %>
+  <p><strong><%= @pitch.price %>€</strong> / day</p>
