--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -7,4 +7,4 @@
       <%= f.input :end_time, {discard_minute: true} %>
     <p><%= f.submit class: "btn btn-outline-secondary btn-sm " %></p>
   <% end %>
-<%= @booking.total_price %>
+<p>New Total Price: <strong><%= @booking.total_price %>€</strong>
