navbar and footer

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,4 +4,11 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "card";
-@import "pitch-show"
+@import "pitch-show";
+@import "footer";
+
+
+.myfooter {
+  height: 180px;
+  margin-bottom: 0;
+}
