--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-9 justify-centered">
+<div class="container col-9 justify-centered" style="height: calc(100vh - 280px)">
   <table class="table">
     <thead>
       <tr class="table_headers">
