--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="container navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to pitches_path, class: "navbar-brand" do %>
       <%= image_tag ("logov4.png") , style: "width: 400px;" %>
@@ -15,7 +15,7 @@
             <%= link_to "Home", pitches_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Add Pitches", new_pitch_path, class: "nav-link" %>
+            <%= link_to "Add Pitch", new_pitch_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
