--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container col-9 justify-centered">
-  <table class="table">
+<div class="container col-10 justify-centered">
+  <table class="table col-6">
     <thead>
       <tr class="table_headers">
         <th scope="col">Pitch Name</th>
