--- a/app/assets/stylesheets/components/_pitch-show.scss
+++ b/app/assets/stylesheets/components/_pitch-show.scss
@@ -20,3 +20,11 @@
   grid-auto-rows: auto 1fr;
   // grid-auto-rows: minmax(100px, auto);
 }
+
+.card-body .button_to .fa-solid{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-right: 20px;
+  margin-bottom: 15px;
+ }
