--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,8 @@
 .index-card-wrap {
   display: flex;
   justify-content: space-around;
+  margin-top: 24px;
+  margin-bottom: 24px;
   a {
     text-decoration: none;
     color: rgb(13, 13, 58);
