--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,4 +4,6 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "card";
-@import "pitch-show"
+@import "pitch-show";
+@import "table";
+@import "grid";
