--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="pitch-info">
-    <span class="pitch-name"><%= @pitch.name %></span> <%=  @pitch.average_rating  %> <i class="fa-regular fa-star"></i>
-    <%= @pitch.review_count %> Comments <b><span class="text-decoration-underline" > <%= @pitch.location%> </span></b>
+    <span class="pitch-name"><%= @pitch.name %></span>
+    <div>
+      <%= @pitch.average_rating %> <i class="fa-regular fa-star"></i>
+      <%= @pitch.review_count %> Comments <b><span class="text-decoration-underline"><%= @pitch.location%></span></b>
+    </div>
   </div>
   <div class="main">
     <div class="section">
