geocode almost done

--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -15,6 +15,11 @@
       <%= render "bookings/new", pitch: @pitch, booking: @booking %>
     </div>
   </div>
+  <div style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
     <div class="cards-container">
         <% @pitch.bookings.each do |booking|%>
           <%booking.reviews.each do |review| %>
@@ -24,11 +29,11 @@
                 <p><b><%= review.rating %><i class="fa-regular fa-star"></i></b></p>
                 <% if current_user == review.booking.user %>
                   <%= button_to "", review_path(review), method: :delete, class: "fa-solid fa-trash" %>
-                  <% end %>
+                <% end %>
                 </div>
               </div>
-              <% end %>
-            <% end %>
+          <% end %>
+        <% end %>
     </div>
   </div>
 </div>
