botao delete comentes

--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -20,7 +20,7 @@
             <h5 class="card-text"><%= pitch.location %></h5>
             <p class="card-text"><small class="text-muted"><%= pitch.pitch_type %></small></p>
             <div class="price">
-              <p class="card-text"><strong><%= pitch.price %>€</strong> / hour</p>
+              <p class="card-text"><strong><%= pitch.price %>€</strong> / day</p>
             </div>
             <div class="rating">
                 <p class="card-text"><%= pitch.average_rating %><i class="fa-regular fa-star"></i></p>
