--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,7 +5,7 @@
   margin-bottom: 24px;
   a {
     text-decoration: none;
-    color: rgb(13, 13, 58);
+    color: #082e4c;
   }
 }
 
@@ -21,4 +21,21 @@
   position: absolute;
   bottom: 0;
   margin-bottom: 9px;
+}
+
+.btn-outline-primary{
+  --bs-btn-color: #548e60;
+  --bs-btn-border-color: #548e60;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #548e60;
+  --bs-btn-hover-border-color: #548e60;
+  --bs-btn-focus-shadow-rgb: 13, 110, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #548e60;
+  --bs-btn-active-border-color: #548e60;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #548e60;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #548e60;
+  --bs-gradient: none;
 }
