--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -13,11 +13,11 @@
   <% @pitches.each do |pitch| %>
     <div class="col-md-3 mb-3 mt-3 index-card-wrap">
       <%= link_to pitch_path(pitch) do %>
-        <div class="card rounded-4 " style="width: 18rem; height: 30rem">
+        <div class="card rounded-4 shadow-lg" style="width: 18rem; height: 32rem">
           <%= cl_image_tag pitch.photo.key, height: 250, width: 287, crop: :fill, class:"rounded-top-4" %>
           <div class="card-body">
             <h3 class="card-text"><%= pitch.name %></h3>
-            <h5 class="card-text"><%= pitch.location %></h5>
+            <p class="card-text address"><%= pitch.location %></p>
             <p class="card-text"><small class="text-muted"><%= pitch.pitch_type %></small></p>
             <div class="price">
               <p class="card-text"><strong><%= pitch.price %>€</strong> / day</p>
