--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -16,7 +16,7 @@
         <div class="card rounded-4 shadow-lg" style="width: 18rem; height: 32rem">
           <%= cl_image_tag pitch.photo.key, height: 250, width: 287, crop: :fill, class:"rounded-top-4" %>
           <div class="card-body">
-            <h3 class="card-text"><%= pitch.name %></h3>
+            <h3 class="card-text"><%= pitch.name.capitalize %></h3>
             <p class="card-text address"><%= pitch.location %></p>
             <p class="card-text"><small class="text-muted"><%= pitch.pitch_type %></small></p>
             <div class="price">
