--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container w-25 mt-5">
+<div class="container col-4 my-5">
 
   <%= simple_form_for pitch do |f| %>
       <%= f.input :name %>
@@ -6,7 +6,6 @@
       <%= f.input :price %>
       <%= f.input :location %>
       <%= f.input :pitch_type, collection: %w[Basketball Padel Tenis Football Futsal Field-Hockey Hockey Volleyball Handball] %>
-      <%= f.input :available %>
-    <p><%= f.submit class: "btn btn-outline-secondary btn-sm " %></p>
+    <p> <%= f.input :available %> <%= f.submit class: "btn btn-success rounded-4" %></p>
   <% end %>
 </div>
