--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,10 +1,10 @@
-<div class="container w-25 mt-5" style="height: calc(100vh - 312px)">
+<div class="container col-3 mt-5" style="height: calc(100vh - 312px)">
 <h1>Review the Pitch</h1>
 <%= simple_form_for [@booking, @review] do |f| %>
   <%= f.input :rating, collection: (0..5)  %>
   <%= f.input :comment %>
-  <%= f.submit "Submit Review", class: "btn btn-primary mb-3" %>
+  <%= f.submit "Submit Review", class: "btn btn-success rounded-4 mt-3 col-12" %>
 <% end %>
 
-  <%= link_to "Go back to your bookings", bookings_path(@booking), class: "btn btn-primary" %>
+  <%= link_to "Go back to your bookings", bookings_path(@booking), class: "btn btn-gray rounded-4 mt-3 col-12" %>
 </div>
