--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,7 +2,8 @@
 <h1>Review the Pitch</h1>
 <%= simple_form_for [@booking, @review] do |f| %>
   <%= f.input :rating, collection: (0..5)  %>
-  <%= f.input :comment %>
+  <%= f.input :comment,
+              hint: "minimum 3 characteres" %>
   <%= f.submit "Submit Review", class: "btn btn-primary mb-3" %>
 <% end %>
 
