--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,26 @@
-<div class="container" style="height: calc(100vh - 280px)">
-  <div class="d-flex justify-content-around align-items-center">
-    <% if @user.photo.attached? %>
-      <%= cl_image_tag @user.photo.key, height: 250, width: 250, crop: :fill, class:"rounded-circle" %>
-      <% else %>
-        <img src="https://static.vecteezy.com/system/resources/previews/008/442/086/original/illustration-of-human-icon-user-symbol-icon-modern-design-on-blank-background-free-vector.jpg" alt="" class="rounded-circle avatar-img" >
+<div class="container col-5" style="height: calc(100vh - 280px)">
+
+    <div class="d-flex justify-content-center">
+      <% if @user.photo.attached? %>
+        <%= cl_image_tag @user.photo.key, height: 250, width: 250, crop: :fill, class:"rounded-circle" %>
+        <% else %>
+          <img src="https://static.vecteezy.com/system/resources/previews/008/442/086/original/illustration-of-human-icon-user-symbol-icon-modern-design-on-blank-background-free-vector.jpg" alt="" class="rounded-circle avatar-img" >
       <% end %>
-      <%= link_to "edit", edit_user_registration_path, class:"text-decoration-none btn btn-outline-info btn-sm"%>
-    <div class="border rounded-4 card-name">
-      <p><pan><b>First Name</b></span></p>
-      <%= @user.first_name %>
     </div>
-    <div class="border rounded-4 card-name">
-      <p><pan><b>Last Name</b></span></p>
-      <%= @user.last_name %>
-    </div>
+
+    <span class="d-flex justify-content-center mt-4"> <h5><%= @user.first_name %> <%= @user.last_name%></h5></span>
+    <span class="d-flex justify-content-center"><%= link_to "Edit profile", edit_user_registration_path, class: "text-decoration-none btn btn-outline-success btn-sm rounded-4"%></span>
+
+      <table class="table mt-3 mb-5">
+        <tbody>
+          <% @user.pitches.each do |pitch| %>
+          <tr>
+            <td><%= pitch.name %></td>
+            <td><%= link_to "edit", edit_pitch_path(pitch), class:"text-decoration-none btn btn-outline-info btn-sm rounded-4"%></td>
+            <td><%= link_to "Delete", pitch_path(pitch), data: { turbo_method: :delete }, class: "text-decoration-none btn btn-outline-danger btn-sm rounded-4" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
   </div>
-  <table class="table mt-3">
-    <tbody>
-      <% @user.pitches.each do |pitch| %>
-      <tr>
-        <td><%= pitch.name %></td>
-        <td><%= link_to "edit", edit_pitch_path(pitch), class:"text-decoration-none btn btn-outline-info btn-sm"%></td>
-        <td><%= link_to "Delete", pitch_path(pitch), data: { turbo_method: :delete }, class: "text-decoration-none btn btn-outline-danger btn-sm" %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
 </div>
