--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -17,7 +17,7 @@
       <% @bookings.each do |booking| %>
 
       <tr>
-        <td><%= link_to booking.pitch.name.titleize, pitch_path(booking.pitch), class:"text-decoration-none", style:"color:inherit; transition: background-color 0.3s ease; padding: 5px;" %>
+        <td><%= booking.pitch.name %></td>
         <td><%= booking.start_time.strftime('%d-%m-%Y %H:%M') %></td>
         <td><%= booking.end_time.strftime('%d-%m-%Y %H:%M') %></td>
         <td><%= sprintf('%.2f', booking.total_price) %>€</td>
