--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -4,7 +4,7 @@
   <%= simple_form_for [pitch, booking], data: { controller: 'flatpickr' } do |f| %>
     <%= f.input :start_time, as: :string, input_html: { data: { flatpickr_target: "startTime" } } %>
     <%= f.input :end_time, as: :string, input_html: { data: { flatpickr_target: "endTime" } } %>
-    <p><%= f.submit class: "btn btn-outline-secondary btn-sm " %></p>
+    <p><%= f.submit class: "btn btn-success btn-sm rounded-4" %></p>
   <% end %>
 <% end %>
 
