--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -4,7 +4,7 @@
   display: grid;
   height: 100%;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 2fr 1fr;
+  grid-template-rows: 1fr;
   gap: 4rem;
 }
 
@@ -20,3 +20,7 @@
 #rating{
   width:150px;
 }
+
+.section .sub-section .card{
+  transform:translatex(3px) translatey(-470px);
+ }
