--- a/app/assets/stylesheets/components/_pitch-show.scss
+++ b/app/assets/stylesheets/components/_pitch-show.scss
@@ -11,6 +11,14 @@
   overflow: hidden;
 }
 
+.card {
+  max-width: 864px;
+}
+.booking-form{
+  max-width: 300px !important;
+  max-height: 350px !important;
+}
+
 
 .cards-container {
   margin-top: 20px;
@@ -27,4 +35,4 @@
   right: 0;
   margin-right: 20px;
   margin-bottom: 15px;
-}
+ }
