--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -5,7 +5,7 @@
       <%= f.input :photo, as: :file %>
       <%= f.input :price %>
       <%= f.input :location %>
-      <%= f.input :pitch_type, collection: %w[Basketball Padel Tenis Football Futsal Field-Hockey Hockey Volleyball Handball] %>
+      <%= f.input :pitch_type, collection: %w[Basketball Padel Tenis Football Futsal Field-Hockey Hockey Volleyball Handball Table-Tenis] %>
     <p> <%= f.input :available %> <%= f.submit class: "btn btn-success rounded-4" %></p>
   <% end %>
 </div>
